adding more details to gc